============================
django-dynamic-choices changelog
============================

Version 0.1.7
--------------------------------
* fixed the FilteredSelectMultiple widget handler to works when the the widget
	is not initialized yet such as when the widget is used in and inline.

Version 0.1.6, 7 May 2011:
--------------------------------
* raise exception when a custom admin add|change_form_template is specified
	on a DynamicAdmin if it doesn't extends the dynamic_choices one.
* make sure admin select widgets trigger 'change' events when a new option is added to them
	without relying on DOMEvents.
* make sure DynamicModelChoiceField's queryset returns distinct objects to avoid raising
	MultipleObjectsReturned when the dynamically generated queryset spans over multiple tables
  and returns the same object twice.

Version 0.1.5, 5 April 2011:
--------------------------------

* fixed some issue with the add link binders in the admin
* make DynamicChoicesQueryset cloneable

Version 0.1.4, 8 March 2011:
--------------------------------

* make sure Promise objects such as translation objects specified in the choices callback
  are encoded correcly.
* make sure admin select widgets trigger 'change' events when a new option is added to them
* added js field onchange bindings while making sure to avoid circular references

Version 0.1.3, 18 February 2011:
--------------------------------

* added js api to bind FK/M2M admin widget add links to specific fields
* added support for multiple jQuery versions
* fixed an issue with admin dynamic-choices js files not considering settings.(STATIC|MEDIA)_URL. Thanks bmeyer71@github.com
* embed admin choices binder directly in the page
  (make sure to extend "admin/dynamic_choices_change_form.html" if you're overriding DynamicAdmin.change|add_form_template)

Version 0.1.2, 5 February 2011:
--------------------------------

* fixed an issue with choices callback with no lookups